git-svn-id: https://swt-chart.svn.sourceforge.net/svnroot/swt-chart/trunk@70 d30752db-1043-0410-9340-8085d4ee3fb9